# nikki

./: .gitignore  CMakeLists.txt  format.c  format.h  local_chain.c  local_chain.h  main.c  nikki.c  nikki.h  node.c  node.h
cli/: CMakeLists.txt  nikki.c
include/nikki/: local_chain.h  nikki.h  node.h  node_init.h  util.h
python/nikpie/: reader.py  rpc_push.py  server.py  test.html
src/: CMakeLists.txt  local_chain.c  nikki.c  node.c
